# OmniPlexus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  commands.json
Mechanical/: common.scad
Software/: CMakeLists.txt
Software/devices/: Chassis.json  EspBoard.json  IndicatorBoard.json
Software/include/opx/core/: CommunicationManager.h  Config.h  DeviceRegistry.h  OpxDevice.h  OpxSession.h  PlatformClock.h  TelemetryManager.h  TransportManager.h  TriggerConfig.h  ValueSource.h
Software/include/opx/embedded/core/: OpxDevice.h
Software/include/opx/embedded/transport/cdnc/: CDnC.cpp  CDnCConfig.h  CDnCManager.h  CDnCSlaveManager.h  CDnCSlaveTransport.h  CDnCTransport.h
Software/include/opx/embedded/transport/http/: EspHttpTransport.h
Software/include/opx/embedded/transport/serial/: ArduinoSerialTransport.h
Software/include/opx/embedded/transport/wifi/: EspWiFiTransport.h
Software/include/opx/interfaces/: IEncoder.h  ITransport.h
Software/include/opx/mutex/: FreeRtosMutex.h  NullMutex.h  StdMutex.h
Software/include/opx/pc/core/: OpxSession.h
Software/include/opx/pc/registry/: CommandRegistry.h
Software/include/opx/pc/transport/http/: PcHttpTransport.h  types.h
Software/include/opx/pc/transport/serial/: PcSerialTransport.h
Software/include/opx/pc/transport/wifi/: PcWiFiTransport.h
Software/include/opx/protocol/: BinaryEncoder.h
Software/include/opx/registry/: CommandRegistry.h
Software/include/opx/shared/constants/: ProtocolConstants.h
Software/include/opx/shared/core/: CommunicationManager.h  Config.h  DeviceRegistry.h  PlatformClock.h  SettingsManager.h  TelemetryManager.h  TransportManager.h  TriggerConfig.h  ValueSource.h  platform.h  string.hpp
Software/include/opx/shared/interfaces/: IConnectable.h  IEncoder.h  IMutex.h  IPlatformClock.h  ITransport.h
Software/include/opx/shared/mutex/: FreeRtosMutex.h  NullMutex.h  StdMutex.h
Software/include/opx/shared/protocol/: BinaryEncoder.h
Software/include/opx/shared/transport/: AbstractTransport.h
Software/include/opx/shared/types/: ProtocolTypes.h  RobotData.h
Software/include/opx/shared/utils/: CRC8.h  CommandQueue.h  Logger.h  PendingAckQueue.h  ResponseQueue.h
Software/include/opx/transport/: AbstractTransport.h
Software/include/opx/transport/cdnc/: CDnC.cpp  CDnCConfig.h  CDnCManager.h  CDnCTransport.h
Software/include/opx/transport/http/: PcHttpTransport.h
Software/include/opx/transport/serial/: ArduinoSerialTransport.h  PcSerialTransport.h
Software/include/opx/transport/wifi/: PcWiFiTransport.h
Software/include/opx/types/: RobotData.h
Software/include/opx/utils/: CRC8.h  CommandQueue.h  Logger.h  PendingAckQueue.h  ResponseQueue.h
Software/src/: OpxDevice.cpp
Software/src/embedded/: OpxDevice.cpp
Software/src/pc/: OpxSession.cpp
Software/tests/transport/: test_serial_transport.cpp
Software/tests/transport/http/: receive_telemetry.cpp  send_command.cpp
Software/tests/transport/wifi/: send_command.cpp
Software/tools/CommandGenerator/: Generator.h  Validator.h
devices/: Common.json  EspBoard.json  IndicatorBoard.json  TempBoard.json
include/opx/constants/: ProtocolConstants.h
include/opx/core/: CommunicationManager.h  Config.h  DeviceRegistry.h  OpxDevice.h  OpxSession.h  SettingsManager.h  ValueSource.h  platform.h
include/opx/interfaces/: IConnectable.h  IEncoder.h  IPlatformClock.h
include/opx/protocol/: BinaryEncoder.h
include/opx/registry/: CommandRegistry.h
include/opx/transport/: AbstractTransport.h
include/opx/transport/cdnc/: CDnC.cpp  CDnC.h  CDnCConfig.h  CDnCManager.h  CDnCSlaveManager.h  CDnCSlaveTransport.h  CDnCTransport.h
include/opx/transport/http/: EspHttpTransport.h  types.h
include/opx/transport/wifi/: EspWiFiTransport.h
include/opx/types/: ProtocolTypes.h  RobotData.h
include/smartdrive/constants/: ProtocolConstants.h
include/smartdrive/core/: CommunicationManager.h  Config.h  OpxDevice.h  OpxSession.h  PlatformClock.h  TelemetryManager.h  TransportManager.h  TriggerConfig.h  ValueSource.h  ValueSource.h.orig
include/smartdrive/interfaces/: IEncoder.h  IMutex.h  IPlatformClock.h  IProtocol.h  ITransport.h
include/smartdrive/mutex/: FreeRtosMutex.h  NullMutex.h  StdMutex.h
include/smartdrive/protocol/: BinaryEncoder.h  BinaryProtocol.h
include/smartdrive/registry/: CommandRegistry.h
include/smartdrive/transport/: AbstractTransport.h  ArduinoCDnCTransport.h  ArduinoParallelCDnCTransport.h  ArduinoSerialTransport.h  CDnCTransport.h  ParallelCDnCTransport.h  PcSerialTransport.h  STM32ArduinoCDnCTransport.h  STM32CDnCTransport.h
include/smartdrive/transport/cdnc/: ArduinoCDnCTransport.h  ArduinoParallelCDnCTransport.h  CDnCManager.h  CDnCTransport.h  ParallelCDnCTransport.h  STM32ArduinoCDnCTransport.h  STM32ParallelCDnCTransport.h
include/smartdrive/transport/cdnc/ActualCDnC/: CDnC.h  CDnCManager.h  CDnCTransport.h
include/smartdrive/transport/http/: EspHttpTransport.h  PcHttpTransport.h
include/smartdrive/transport/serial/: ArduinoSerialTransport.h
include/smartdrive/transport/wifi/: EspWiFiTransport.h  PcWiFiTransport.h
include/smartdrive/types/: ProtocolTypes.h  RobotData.h
include/smartdrive/utils/: CRC8.h  CommandQueue.h  Logger.h  PendingAckQueue.h  ResponseQueue.h
src/: OpxDevice.cpp  OpxSession.cpp
tests/: test_command_registry.cpp
tests/protocol/: test_binary_encoder.cpp  test_binary_protocol.cpp
tests/transport/: serial_command_response.cpp  serial_receive_multithreaded.cpp  serial_receive_single.cpp  serial_round_trip.cpp  serial_telemetry_receive.cpp  test_serial_transport.cpp
tests/transport/wifi/: send_command.cpp
tools/CommandGenerator/: CMakeLists.txt  Generator.h  Validator.h  main.cpp
